fix: readability, content

--- a/src/global.css
+++ b/src/global.css
@@ -17,7 +17,3 @@ footer {
 section {
     @apply bg-white my-5 p-5 rounded-xl shadow-lg;
 }
-
-article {
-    @apply bg-slate-100 mt-2 py-2 px-3 rounded-lg shadow-sm text-center;
-}
